--- a/Movies.html
+++ b/Movies.html
@@ -11,15 +11,16 @@
 <body>
 <h1>Sam's Top 10 Movie List</h1>
 <ol>
-	<li> Raiders of the Lost Ark <li>
-	<li> The Temple of Doom <li>
-	<li> The Last Crusade <li>
-	<li> Star Wars: Return of The Jedi <li>
-	<li> Star Wars: A New Hope <li>
-	<li> Tropic Thunder <li>
-	<li> Pineapple Express <li>
-	<li> Inglorious Bastards <li>
-	<li> Full Metal Jacket <li>
-	<li> Moonrise Kingdom <li>
+	<li> Raiders of the Lost Ark </li>
+	<li> The Temple of Doom </li>
+	<li> The Last Crusade </li>
+	<li> Star Wars: Return of The Jedi </li>
+	<li> Star Wars: A New Hope </li>
+	<li> Tropic Thunder </li>
+	<li> Pineapple Express </li>
+	<li> Inglorious Bastards </li>
+	<li> Full Metal Jacket </li>
+	<li> Moonrise Kingdom </li>
+</ol>
 </body>
 </html>
