--- a/HTMLTable.html
+++ b/HTMLTable.html
@@ -1,27 +1,100 @@
 <!DOCTYPE html>
 <html>
+<center>
 <head>
-	<title>Top Brand</title>
-</head>
-<style type="text/css">
+	<title>Sam's Sleep Schedule </title>
+
+	<style type="text/css">
 	body{
-		 background-image:url("http://31.media.tumblr.com/3990933dd53a60b109cf870ce4ea1791/tumblr_msxwzlndwD1rpc1rco1_500.gif");} 
+background-image:url("http://www.kinyu-z.net/data/wallpapers/92/1022307.jpg");
+ background-size: 1100px; 
+  width: 700px;
+  height: 20px;  
+		}
 
-h1{
-	font-size: 50px;
-	font-family: Impact;  
-	color: #FF33D9;
-	background-color: #615c68;
-}
+		table{
+			font-family:Verdana;
+			color: blue;
+			background-color: #8BBBC0 ; 
+			border-bottom:4px solid black;
+			border-top:4px solid black;
+			border-left: 4px solid black;
+			border-right:4px solid black;
 
-table{
-	  background-color: #33ffc4;
-	  margin: auto;
-	  border-collapse: collapse;
-    
-
-</style>
+		}
+		td{	
+			font-family: Verdana;
+			padding:15px;
+			border-bottom: 4px solid purple;
+			border-left: 4px solid purple;
+			border-right:4px solid purple;
+			border-top:4px solid purple;
+		}
+		td:hover{
+			background-color: #80DA70;
+		}
+		
+		tr:hover{
+			background-color: #CF81DD;
+		}
+	</style>
+</head>
 <body>
-</style>
+	<h1>Sam's Sleep Schedule</h1>
+	<table>
+		<thead>
+			<tr>
+				<th>DAY</th> 
+				<th>SLEEP TIME</th>
+				<th>WAKE UP TIME</th>
+				<th>HOURS SLEPT</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<th>Monday</th> 
+				<th>12:00 PM</th>
+				<th>7:00 AM</th>
+				<th>7 HOURS</th>
+			</tr>
+			<tr>
+				<td>Tuesday</td>
+				<td>12:00 PM</td>
+				<td>7:00 AM</td>
+				<td>7:00 HOURS</td>
+			</tr>
+			<tr>
+				<td>Wednesday</td>
+				<td>12:00 PM</td>
+				<td>7:00 AM</td>
+				<td>7:00 HOURS</td>
+			</tr>
+			<tr>
+				<td>Thurday</td>
+				<td>12:00 PM</td>
+				<td>7:00 AM</td>
+				<td>7:00 HOURS</td>
+			</tr>
+			<tr>
+				<td>Friday</td>
+				<td>12:00 PM</td>
+				<td>7:00 AM</td>
+				<td>7:00 HOURS</td>
+			</tr>
+			<tr>
+				<td>Saturday</td>
+				<td>3:00 AM</td>
+				<td>8:00 AM</td>
+				<td>5:00 HOURS</td>
+			</tr>
+			<tr>
+				<td>Sunday</td>
+				<td>4:00 PM</td>
+				<td>1:00 AM</td>
+				<td>9:00 HOURS</td>
+			</tr>
+		</tbody>
+	</table>
 </body>
+</center>
 </html>
